Feat: Multi-user database integration (Firebase Auth & Firestore)

--- a/index.html
+++ b/index.html
@@ -349,6 +349,15 @@
 
     </div>
 
+    <!-- Firebase SDKs (Compat for Vanilla JS) -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="js/firebase-config.js"></script>
+
     <!-- Scripts -->
     <script src="js/data.js"></script>
     <script src="js/city-renderer.js"></script>
