Fix: Network timeout handling and clearer auth UI messaging

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div id="auth-overlay" class="overlay active">
             <div class="glass-panel auth-panel">
                 <h1 class="logo glow-text">TIMELINE DRIFT</h1>
-                <p class="subtitle">Secure connection required...</p>
+                <p class="subtitle">IDENTITY VERIFICATION PROTOCOL</p>
 
                 <div class="auth-forms">
                     <form id="login-form">
