fix(auth): Robust offline handling and connection diagnostics

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             <div class="glass-panel auth-panel">
                 <h1 class="logo glow-text">TIMELINE DRIFT</h1>
                 <p class="subtitle">IDENTITY VERIFICATION PROTOCOL</p>
+                <div id="connection-status" class="connection-status">Checking Neural Link...</div>
 
                 <div class="auth-forms">
                     <form id="login-form">
